Specify the datatype instead of just calling everything "data"
